docs/test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
  namespace: default
  labels:
    app: test
spec:
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
        - name: test
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          image: nginx:1.19
