docs/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  defaultBackend:
    service:
      name: test
      port:
        name: http
  rules:
    - host: test.minikube
  tls:
    - secretName: test
      hosts:
        - test.minikube
