docs/test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 80
      name: test
      protocol: TCP
      targetPort: http
  selector:
    app: test
